# Solar-System-simulation

./: .clang-format.txt  .gitignore  CMakeLists.txt  README.md  Space simulation.sln
Space simulation/: Camera_Control.h  CelestialBody.cpp  CelestialBody.h  Collision.cpp  Collision.h  Dust.cpp  Dust.h  Dynamic_Array.h  Meteor.cpp  Meteor.h  Moon.cpp  Moon.h  Planet.cpp  Planet.h  Space simulation.vcxproj  Space simulation.vcxproj.filters  Star.cpp  Star.h  String.cpp  String.h  main.cpp
Space simulation/Textures&Shaders/: Star.fs
build1/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SpaceSimulation.sln  SpaceSimulation.vcxproj  SpaceSimulation.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
include/: CelestialBody.h  Collision.h  Dust.h  Dynamic_Array.h  Meteor.h  Moon.h  MyString.h  Star.h  String.h  logger.h
src/: Camera_Control.cpp  CelestialBody.cpp  Collision.cpp  Dust.cpp  Meteor.cpp  Moon.cpp  Planet.cpp  Star.cpp  String.cpp  main.cpp
